--- a/about.html
+++ b/about.html
@@ -190,7 +190,13 @@ $(document).ready(function () {
      Research
   </a>
 </li>
-<li class="dropdown-header"> Packages</li>
+<li>
+  <a href="packages.html">
+    <span class="fa fa-dropbox"></span>
+     
+     Packages
+  </a>
+</li>
 <li>
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
@@ -250,7 +256,7 @@ $(document).ready(function () {
 
 
 <p><img src="media/snow.jpg" width="700px" style="display: block; margin: auto;" /></p>
-<p>I’m a neuropsychologist, psychotherapist, pizza lover, currently living in Paris, France.</p>
+<p>I’m a neuropsychologist, psychotherapist &amp; pizza lover, currently living in Paris, France.</p>
 <div id="resume-cv" class="section level1">
 <h1>Resume / CV</h1>
 <p>You can download my full CV with the following links:</p>
