--- a/index.html
+++ b/index.html
@@ -190,7 +190,13 @@ $(document).ready(function () {
      Research
   </a>
 </li>
-<li class="dropdown-header"> Packages</li>
+<li>
+  <a href="packages.html">
+    <span class="fa fa-dropbox"></span>
+     
+     Packages
+  </a>
+</li>
 <li>
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
@@ -249,7 +255,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/ski.jpg" width="800" style="display: block; margin: auto;" /></p>
+<p><img src="media/ski.jpg" width="600" style="display: block; margin: auto;" /></p>
 <p>You have reached my personal webpage. If you’re looking to learn about what I’m doing, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website, mainly because it’s funny.</p>
 <p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cit</p>
 
