--- a/packages.html
+++ b/packages.html
@@ -190,7 +190,13 @@ $(document).ready(function () {
      Research
   </a>
 </li>
-<li class="dropdown-header"> Packages</li>
+<li>
+  <a href="packages.html">
+    <span class="fa fa-dropbox"></span>
+     
+     Packages
+  </a>
+</li>
 <li>
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
