--- a/courses.html
+++ b/courses.html
@@ -255,6 +255,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><img src="media/conf.jpg" width="700px" style="display: block; margin: auto;" /></p>
 <div id="neuroimaging" class="section level2">
 <h2>Neuroimaging</h2>
 <table style="width:94%;">
