--- a/research.html
+++ b/research.html
@@ -284,7 +284,7 @@ $(document).ready(function () {
 <p align="center">
 <em>2016</em>
 </p>
-<p><strong>Makowski, D.</strong> (2016). <a href="https://cran.r-project.org/web/packages/neuropsychology/neuropsychology.pdf">R Package neuropsychology: A Toolbox for Psychologists, Neuropsychologists and Neuroscientists</a>. Available from <a href="https://github.com/neuropsychology/neuropsychology.R" class="uri">https://github.com/neuropsychology/neuropsychology.R</a>. The Comprehensive R Archive Network (CRAN).</p>
+<p><strong>Makowski, D.</strong> (2016). <a href="https://cran.r-project.org/web/packages/neuropsychology/neuropsychology.pdf">R Package neuropsychology: A Toolbox for Psychologists, Neuropsychologists and Neuroscientists</a>. The Comprehensive R Archive Network (CRAN).</p>
 <p>Nicolas, S., &amp; <strong>Makowski, D</strong>. (2016). <em>Centenaire Ribot (I). La réception de l’oeuvre de Théodule Ribot chez l’éditeur Ladrange (1870-1873)</em>. Bulletin de Psychologie, 69, <em>in press</em>.</p>
 <p>Nicolas, S., &amp; <strong>Makowski, D</strong>. (2016). <em>Can mental fatigue be measured by Weber’s compass? Alfred Binet’s answer on the value of aesthesiometry (tactile sensitivity) as an objective measure of mental fatigue.</em> European Yearbook of the History of Psychology, vol. 2, <em>in press</em>.</p>
 <p>Sperduti, M., <strong>Makowski, D.</strong>, &amp; Piolino, P. (2016). <a href="https://dominiquemakowski.github.io/papers/sperduti2016b.pdf"><em>The protective role of long-term meditation on the decline of the executive component of attention in aging: a preliminary cross-sectional study</em></a>. Aging, Neuropsychology, and Cognition, 1-12.</p>
