--- a/about.html
+++ b/about.html
@@ -255,7 +255,12 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/snow.jpg" width="700px" style="display: block; margin: auto;" /></p>
+<style>
+.image{float: left;}
+</style>
+<div style="float:right">
+<p><img src="media/museum.png" style="width: 50%; height: 50%"/></p>
+</div>
 <p>I’m a neuropsychologist, psychotherapist &amp; pizza lover, currently living in Paris, France.</p>
 <div id="resume-cv" class="section level1">
 <h1>Resume / CV</h1>
