--- a/courses.html
+++ b/courses.html
@@ -255,7 +255,29 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/conf.jpg" width="800px" style="display: block; margin: auto;" /></p>
+<p><img src="media/conf3.jpg" width="550px" style="display: block; margin: auto;" /></p>
+<p>My technical field of expertise lies in applied statistics with R, complex experiment creation, EEG and biosignal processing with Python.</p>
+<div id="neuropsychology" class="section level2">
+<h2>Neuropsychology</h2>
+<table style="width:97%;">
+<colgroup>
+<col width="43%" />
+<col width="54%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>Link</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><a href="http://neuropsydia.readthedocs.io/en/latest/tutorials/index.html">Experiment Creation</a></td>
+<td>Create experiments, tasks or questionnaires with Neuropsydia for Python.</td>
+</tr>
+</tbody>
+</table>
+</div>
 <div id="neuroimaging" class="section level2">
 <h2>Neuroimaging</h2>
 <table style="width:94%;">
