--- a/research.html
+++ b/research.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
 <p align="center">
 <em>2017</em>
 </p>
-<p><strong>Makowski, D.</strong>, Dutriaux, L., (<em>under review</em>). <em>Neuropsydia.py: A Python Module for Creating Experiments, Tasks and Questionnaires</em>, The Journal of Open Source Software.</p>
+<p><strong>Makowski, D.</strong>, Dutriaux, L., (<a href="https://github.com/openjournals/joss-reviews/issues/259"><em>under review</em></a>). <em>Neuropsydia.py: A Python Module for Creating Experiments, Tasks and Questionnaires</em>, The Journal of Open Source Software.</p>
 <p><strong>Makowski, D.</strong>, Sperduti, M., Lavallée, S., Nicolas, S. &amp; Piolino, P. (<em>under review</em>). <em>Interindividual Variability in Emotion Regulation: Relationship with Mindfulness, Life Satisfaction, Physical Activity and Mood Disorders</em>, Assessment.</p>
 <p>Sperduti, M., Armougum, A., <strong>Makowski, D.</strong> &amp; Piolino, P. (<em>under review</em>). <em>Interaction between attentional systems and episodic memory encoding: the impact of conflict on binding of information</em>, Experimental Brain Research.</p>
 <p><strong>Makowski, D.</strong>*, Sperduti, M.*, Nicolas, S. &amp; Piolino, P. (<em>under review</em>). “Being there” <em>and remembering it: Presence improves Memory Encoding</em>. Consciousness &amp; Cognition.</p>
