--- a/about.html
+++ b/about.html
@@ -255,12 +255,10 @@ $(document).ready(function () {
 </div>
 
 
-<style>
-.image{float: left;}
-</style>
-<div style="float:right">
-<p><img src="media/museum.png" style="width: 50%; height: 50%"/></p>
-</div>
+<p><img src="media/cambodia.JPG" width="800px" style="display: block; margin: auto;" /> <!-- <style> --> <!-- .image{float: left;} --> <!-- </style> --></p>
+<!-- <div style="float:right"> -->
+<!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
+<!-- </div> -->
 <p>I’m a neuropsychologist, psychotherapist &amp; pizza lover, currently living in Paris, France.</p>
 <div id="resume-cv" class="section level1">
 <h1>Resume / CV</h1>
