--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/cambodia.JPG" width="800px" style="display: block; margin: auto;" /> <!-- <style> --> <!-- .image{float: left;} --> <!-- </style> --></p>
+<p><img src="media/conf4.jpg" width="600px" style="display: block; margin: auto;" /> <!-- <style> --> <!-- .image{float: left;} --> <!-- </style> --></p>
 <!-- <div style="float:right"> -->
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
