--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@ $(document).ready(function () {
 <!-- <div style="float:right"> -->
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
-<p>I’m a neuropsychologist, psychotherapist &amp; pizza lover, currently living in Paris, France.</p>
+<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France.</p>
 <div id="resume-cv" class="section level1">
 <h1>Resume / CV</h1>
 <p>You can download my full CV with the following links:</p>
