--- a/about.html
+++ b/about.html
@@ -235,11 +235,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://www.researchgate.net/profile/Dominique_Makowski">
-    <span class="fa fa-rocket"></span>
-     
-    
-  </a>
+  <a href="https://www.researchgate.net/profile/Dominique_Makowski">RG</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -255,17 +251,51 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/conf4.jpg" width="600px" style="display: block; margin: auto;" /> <!-- <style> --> <!-- .image{float: left;} --> <!-- </style> --></p>
+<hr />
+<p align="center">
+<strong>NOTE: I’m currently looking for postdoc opportunities (I’m finishing my current contract in July 2018)</strong>
+</p>
+<hr />
+<!-- <style> -->
+<!-- .image{float: left;} -->
+<!-- </style> -->
 <!-- <div style="float:right"> -->
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
-<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France.</p>
-<div id="resume-cv" class="section level1">
-<h1>Resume / CV</h1>
-<p>You can download my full CV with the following links:</p>
+<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and I can pretend to speak Italian. My main figures of reference are Friston, Epictetus and Iron Man. You can find many formal details in my CV below.</p>
+<hr />
+<div id="download" class="section level3">
+<h3>Download</h3>
+<p>You can download my <strong>full CV</strong> with the following links:</p>
 <ul>
 <li><p><a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a></p></li>
 <li><p><a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a></p></li>
+</ul>
+<hr />
+<div class="figure" style="text-align: center">
+<img src="media/conf4.jpg" alt="**A picture of myself showing some amazing results.**" width="600px" />
+<p class="caption">
+<strong>A picture of myself showing some amazing results.</strong>
+</p>
+</div>
+<hr />
+</div>
+<div id="in-short" class="section level3">
+<h3>In Short</h3>
+<p align="center">
+<em>Titles and Licenses</em>
+</p>
+<ul>
+<li>Clinical Neuropsychologist (2014, University of Sorbonne Paris Cité)</li>
+<li>Cognitive and Behavioural Psychotherapist (2017, AFTCC)</li>
+</ul>
+<p align="center">
+<em>Certifications</em>
+</p>
+<ul>
+<li>Academic Teaching (2017, University of Sorbonne Paris Cité)</li>
+<li>Mindfulness based on Compassion and Insight (2016, Sainte-Anne Hospital)</li>
+<li>First Aid (2016, University of Sorbonne Paris Cité)</li>
 </ul>
 </div>
 
