--- a/index.html
+++ b/index.html
@@ -235,11 +235,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://www.researchgate.net/profile/Dominique_Makowski">
-    <span class="fa fa-rocket"></span>
-     
-    
-  </a>
+  <a href="https://www.researchgate.net/profile/Dominique_Makowski">RG</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -256,6 +252,11 @@ $(document).ready(function () {
 
 
 <p><img src="media/ski.jpg" width="600" style="display: block; margin: auto;" /></p>
+<hr />
+<p align="center">
+<strong>NOTE: I’m currently looking for postdoc opportunities (I’m finishing my current contract in July 2018)</strong>
+</p>
+<hr />
 <p>You have reached my personal webpage. If you’re looking to learn about what I’m doing, you’re in the right place!</p>
 <p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
 <p><em>PS: I made this website using R.</em></p>
