--- a/courses.html
+++ b/courses.html
@@ -235,11 +235,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://www.researchgate.net/profile/Dominique_Makowski">
-    <span class="fa fa-rocket"></span>
-     
-    
-  </a>
+  <a href="https://www.researchgate.net/profile/Dominique_Makowski">RG</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
