--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@ $(document).ready(function () {
 <!-- <div style="float:right"> -->
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
-<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and I can pretend to speak Italian. My main figures of reference are Friston, Epictetus and Iron Man. You can find many formal details in my CV below.</p>
+<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and I can pretend to speak Italian. My main figures of reference are Friston, Epictetus and Iron Man. You can find many other details in my CV below. You can also <em>illegally</em> download my papers from the <a href="https://dominiquemakowski.github.io/research.html">research</a> page.</p>
 <hr />
 <div id="download" class="section level3">
 <h3>Download</h3>
