--- a/about.html
+++ b/about.html
@@ -251,18 +251,13 @@ $(document).ready(function () {
 </div>
 
 
-<hr />
-<p align="center">
-<strong>NOTE: I’m currently looking for postdoc opportunities (I’m finishing my current contract in July 2018)</strong>
-</p>
-<hr />
 <!-- <style> -->
 <!-- .image{float: left;} -->
 <!-- </style> -->
 <!-- <div style="float:right"> -->
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
-<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and I can pretend to speak Italian. My main figures of reference are Friston, Epictetus and Iron Man. You can find many other details in my CV below. You can also <em>illegally</em> download my papers from the <a href="https://dominiquemakowski.github.io/research.html">research</a> page.</p>
+<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and somehow good in pretending to speak Italian. My main figures of reference are Friston, Epictetus and Batman. My interests are as broad as open-science, history of arts and transhumanism. You can find many other details in my CV below. I encourage you to <em>illegally</em> download my papers from the <a href="https://dominiquemakowski.github.io/research.html">research</a> page.</p>
 <hr />
 <div id="download" class="section level3">
 <h3>Download</h3>
@@ -273,9 +268,9 @@ $(document).ready(function () {
 </ul>
 <hr />
 <div class="figure" style="text-align: center">
-<img src="media/conf4.jpg" alt="**A picture of myself showing some amazing results.**" width="600px" />
+<img src="media/conf4.jpg" alt="**Me showing some ground-breaking results.**" width="600px" />
 <p class="caption">
-<strong>A picture of myself showing some amazing results.</strong>
+<strong>Me showing some ground-breaking results.</strong>
 </p>
 </div>
 <hr />
