--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@ $(document).ready(function () {
 
 
 <p><img src="media/ski.jpg" width="600" style="display: block; margin: auto;" /></p>
-<hr />
-<p align="center">
-<strong>NOTE: I’m currently looking for postdoc opportunities (I’m finishing my current contract in July 2018)</strong>
-</p>
-<hr />
 <p>You have reached my personal webpage. If you’re looking to learn about what I’m doing, you’re in the right place!</p>
 <p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
 <p><em>PS: I made this website using R.</em></p>
+<hr />
+<p align="center">
+<strong>NOTE: I’m currently looking for postdoc opportunities (my current contract ends in July 2018)</strong>
+</p>
+<hr />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
