--- a/about.knit.utf8.utf8.html
+++ b/about.knit.utf8.utf8.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Dominique Makowski, MSc.</title>
+<title>About me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,7 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-1.1/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-1.1/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -246,30 +245,48 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Dominique Makowski, MSc.</h1>
+<h1 class="title toc-ignore">About me</h1>
 
 </div>
 
 
-<p><img src="media/ski.jpg" width="600" style="display: block; margin: auto;" /></p>
+<!-- <style> -->
+<!-- .image{float: left;} -->
+<!-- </style> -->
+<!-- <div style="float:right"> -->
+<!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
+<!-- </div> -->
+<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France.</p>
 <hr />
+<div id="download" class="section level3">
+<h3>Download</h3>
+<p>You can download my <strong>full CV</strong> with the following links:</p>
+<ul>
+<li><p><a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a></p></li>
+<li><p><a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a></p></li>
+</ul>
+<hr />
+<p><img src="media/conf4.jpg" width="600px" style="display: block; margin: auto;" /></p>
+<hr />
+</div>
+<div id="in-short" class="section level3">
+<h3>In Short</h3>
 <p align="center">
-<strong>⚠️ I’m currently looking for postdoc opportunities (my current contract ends in July 2018) ⚠️</strong>
+<em>Titles and Licenses</em>
 </p>
-<hr />
-<p>You have reached my personal webpage. If you’re looking to learn about what I’m doing, you’re in the right place 👊</p>
-<p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
-<p><em>PS: I made this website using R.</em></p>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-98191491-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<ul>
+<li>Clinical Neuropsychologist (2014, University of Sorbonne Paris Cité)</li>
+<li>Cognitive and Behavioural Psychotherapist (2017, AFTCC)</li>
+</ul>
+<p align="center">
+<em>Certifications</em>
+</p>
+<ul>
+<li>Academic Teaching (2017, University of Sorbonne Paris Cité)</li>
+<li>Mindfulness based on Compassion and Insight (2016, Sainte-Anne Hospital)</li>
+<li>First Aid (2016, University of Sorbonne Paris Cité)</li>
+</ul>
+</div>
 
 
 
