--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ $(document).ready(function () {
 <p><img src="media/ski.jpg" width="600" style="display: block; margin: auto;" /></p>
 <hr />
 <p align="center">
-<strong>⚠️ I’m currently looking for postdoc opportunities (my current contract ends in July 2018) ⚠️</strong>
+<strong>⚠️ I’m currently looking for postdoc opportunities (<em>my current contract ends in July 2018</em>) ⚠️</strong>
 </p>
 <hr />
 <p>You have reached my personal webpage. If you’re looking to learn about what I’m doing, you’re in the right place 👊</p>
