--- a/packages.html
+++ b/packages.html
@@ -251,6 +251,13 @@ $(document).ready(function () {
 </div>
 
 
+<div class="figure" style="text-align: center">
+<img src="media/code.jpg" alt="**Writing a program to answer the hard problem of consciousness.**" width="650" />
+<p class="caption">
+<strong>Writing a program to answer the hard problem of consciousness.</strong>
+</p>
+</div>
+<hr />
 <p>Here is a list of my packages.</p>
 <table>
 <colgroup>
