--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@ $(document).ready(function () {
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
      
-    Courses / Trainings
+    Teaching
   </a>
 </li>
 <li>
@@ -257,7 +257,14 @@ $(document).ready(function () {
 <!-- <div style="float:right"> -->
 <!-- <img src="media/cambodia.JPG" style="width: 50%; height: 50%"/> -->
 <!-- </div> -->
-<p>I’m a neuropsychologist, psychotherapist &amp; pizza addict, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and somehow good in pretending to speak Italian. My main figures of reference are Churchill, Epictetus and Batman. My interests are as broad as open-science, history of arts and transhumanism. Finally, I encourage you to <em>illegally</em> download my papers from the <a href="https://dominiquemakowski.github.io/research.html">research</a> page 🙌</p>
+<div class="figure" style="text-align: center">
+<img src="media/conf4.jpg" alt="**Showing some ground-breaking results.**" width="600px" />
+<p class="caption">
+<strong>Showing some ground-breaking results.</strong>
+</p>
+</div>
+<hr />
+<p>I’m a neuropsychologist, psychotherapist &amp; PhD student, currently living in Paris, France. I’m fluent in French, Polish, English, Python, and somehow good at pretending to speak Italian. My main figures of reference are Epictetus, Churchill and Batman. My interests are as broad as open-science, history of arts and transhumanism. My papers are available on the <a href="https://dominiquemakowski.github.io/research.html">research</a> page 🙌</p>
 <hr />
 <div id="download" class="section level3">
 <h3>Download</h3>
@@ -266,13 +273,6 @@ $(document).ready(function () {
 <li><p>💂 <a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a></p></li>
 <li><p>🥐 <a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a></p></li>
 </ul>
-<hr />
-<div class="figure" style="text-align: center">
-<img src="media/conf4.jpg" alt="**Me showing some ground-breaking results.**" width="600px" />
-<p class="caption">
-<strong>Me showing some ground-breaking results.</strong>
-</p>
-</div>
 <hr />
 </div>
 <div id="in-short" class="section level3">
