--- a/about.knit.utf8.html
+++ b/about.knit.utf8.html
@@ -200,7 +200,7 @@ $(document).ready(function () {
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
      
-    Courses / Trainings
+    Teaching
   </a>
 </li>
 <li>
