--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Courses / Trainings</title>
+<title>Teaching</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -201,7 +201,7 @@ $(document).ready(function () {
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
      
-    Courses / Trainings
+    Teaching
   </a>
 </li>
 <li>
@@ -246,75 +246,42 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Courses / Trainings</h1>
+<h1 class="title toc-ignore">Teaching</h1>
 
 </div>
 
 
-<p><img src="media/conf3.jpg" width="550px" style="display: block; margin: auto;" /></p>
-<p>My technical field of expertise lies in applied statistics with R, complex experiment creation, EEG and biosignal processing with Python.</p>
-<div id="neuropsychology" class="section level2">
-<h2>Neuropsychology</h2>
-<table style="width:97%;">
-<colgroup>
-<col width="43%" />
-<col width="54%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Link</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><a href="http://neuropsydia.readthedocs.io/en/latest/tutorials/index.html">Experiment Creation</a></td>
-<td>Create experiments, tasks or questionnaires with Neuropsydia for Python.</td>
-</tr>
-</tbody>
-</table>
+<div class="figure" style="text-align: center">
+<img src="media/code.jpg" alt="**Writing a program to solve the hard problem of consciousness.**" width="650" />
+<p class="caption">
+<strong>Writing a program to solve the hard problem of consciousness.</strong>
+</p>
 </div>
-<div id="neuroimaging" class="section level2">
-<h2>Neuroimaging</h2>
-<table style="width:94%;">
-<colgroup>
-<col width="43%" />
-<col width="51%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Link</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><a href="http://neurokit.readthedocs.io/en/latest/tutorials/Bio.html">Biosignals processing in Python</a></td>
-<td>Process biosignals, such as electrodermal (EDA), cardiac (ECG), respiratory (RSP) or muscular (EMG) data with Python and NeuroKit.</td>
-</tr>
-<tr class="even">
-<td><a href="http://neurokit.readthedocs.io/en/latest/tutorials/EEG.html">EEG</a></td>
-<td>EEG and MEG processing using Python and NeuroKit (currently under developpment).</td>
-</tr>
-</tbody>
-</table>
+<hr />
+<div id="academic" class="section level1">
+<h1>Academic</h1>
+<p>I’ve already give academic lectures on the following topics (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details):</p>
+<ul>
+<li><strong>General Neuroscience and Psychology</strong>: Neuroanatomy, emotion regulation, mindfulness, psychological trauma and handicap</li>
+<li><strong>Clinical Neuropsychology</strong>: Main neurodegenerative, neurological and psychiatric disorders, neuropsychological examination and diagnostic, psychometry, cognitive rehabilitation, practice supervision</li>
+<li><strong>Cognitive Psychology</strong>: Models of working memory, mental imagery and categorisation</li>
+<li><strong>Differential Psychology</strong>: Experimental methodology, scientific reasoning, psychometric properties of tests and questionnaires, statistics and introduction to concepts such as intelligence, personality and creativity</li>
+</ul>
+<hr />
 </div>
-<div id="statistics" class="section level2">
-<h2>Statistics</h2>
-<table>
-<thead>
-<tr class="header">
-<th>Link</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><a href="http://rpubs.com/YaRrr/MLTutorial">To Do</a></td>
-<td>The basics of R for psychology and neuroscience.</td>
-</tr>
-</tbody>
-</table>
+<div id="technical" class="section level1">
+<h1>Technical</h1>
+<p>My technical expertise covers the following topics (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details):</p>
+<ul>
+<li><strong>EEG</strong>: Theory, aquisition (Brain Products and Geodesic) and processing (using <a href="http://martinos.org/mne/stable/index.html">MNE</a>)</li>
+<li><strong>Biosignals</strong>: ECG, EDA, RSP, BVP and facial EMG theory, aquisition (Biopac) and processing (using <a href="https://github.com/neuropsychology/NeuroKit.py">NeuroKit</a>)</li>
+<li><strong>MRI</strong>: Beginner (see <a href="https://dominiquemakowski.github.io/about.html">CV</a> for details about the trainings)</li>
+<li><strong>Statistics</strong>: Bayesian (or frequentist) mixed modelling, machine Learning, structural equation modelling</li>
+<li><strong>Programming</strong>: Python, R, matlab, currently learning Julia</li>
+</ul>
+<!-- ```{r, out.width = "500px", echo = FALSE, eval = TRUE, fig.align='center'} -->
+<!-- knitr::include_graphics("media/conf3.jpg") -->
+<!-- ``` -->
 </div>
 
 
