--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ $(document).ready(function () {
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
      
-    Courses / Trainings
+    Teaching
   </a>
 </li>
 <li>
@@ -254,12 +254,10 @@ $(document).ready(function () {
 <p><img src="media/ski.jpg" width="600" style="display: block; margin: auto;" /></p>
 <hr />
 <p align="center">
-<strong>⚠️ I’m currently looking for postdoc opportunities (<em>my current contract ends in July 2018</em>) ⚠️</strong>
+<strong>⚠️ Looking for postdoc opportunities (<em>my current contract ends in June 2018</em>) ⚠️</strong>
 </p>
 <hr />
-<p>You have reached my personal webpage. If you’re looking to learn about what I’m doing, you’re in the right place 👊</p>
-<p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
-<p><em>PS: I made this website using R.</em></p>
+<p>Welcome to my personal webpage. I’m a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité, and I made this website using R.</p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
