--- a/packages.html
+++ b/packages.html
@@ -201,7 +201,7 @@ $(document).ready(function () {
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
      
-    Courses / Trainings
+    Teaching
   </a>
 </li>
 <li>
@@ -251,50 +251,35 @@ $(document).ready(function () {
 </div>
 
 
-<div class="figure" style="text-align: center">
-<img src="media/code.jpg" alt="**Writing a program to answer the hard problem of consciousness.**" width="650" />
-<p class="caption">
-<strong>Writing a program to answer the hard problem of consciousness.</strong>
-</p>
-</div>
+<p>I’m the author of 3 open-source packages, respectively devoted to experiment creation, EEG and biosignals analysis and statistics.</p>
 <hr />
-<p>Here is a list of my packages.</p>
-<table>
-<colgroup>
-<col width="12%" />
-<col width="50%" />
-<col width="26%" />
-<col width="10%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Name / Link</th>
-<th>Description</th>
-<th>Package Guide</th>
-<th>Source Code</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><a href="neuropsychology.R" class="uri">neuropsychology.R</a></td>
-<td>An R Toolbox for Psychologists, Neuropsychologists and Neuroscientists.</td>
-<td><a href="https://www.rdocumentation.org/packages/neuropsychology/">Documentation</a></td>
-<td><a href="https://github.com/neuropsychology/neuropsychology.R" class="uri">https://github.com/neuropsychology/neuropsychology.R</a></td>
-</tr>
-<tr class="even">
-<td><a href="Neuropsydia.py" class="uri">Neuropsydia.py</a></td>
-<td>A Python Module for Creating Experiments, Tasks and Questionnaires.</td>
-<td><a href="http://neuropsydia.readthedocs.io/%5D">Documentation / Guide</a></td>
-<td><a href="https://github.com/neuropsychology/Neuropsydia.py" class="uri">https://github.com/neuropsychology/Neuropsydia.py</a></td>
-</tr>
-<tr class="odd">
-<td><a href="NeuroKit.py" class="uri">NeuroKit.py</a></td>
-<td>A Python Toolbox for Statistics and Neurophysiological Signal Processing (EEG, EDA, ECG, EMG…).</td>
-<td><a href="http://neurokit.readthedocs.io/">Documentation / Guide</a></td>
-<td><a href="https://github.com/neuropsychology/NeuroKit.py" class="uri">https://github.com/neuropsychology/NeuroKit.py</a></td>
-</tr>
-</tbody>
-</table>
+<p><img src="media/neuropsydia.png" width="300" style="display: block; margin: auto;" /></p>
+<div id="neuropsydia" class="section level3">
+<h3><strong>Neuropsydia</strong></h3>
+<ul>
+<li>A Python Module for Creating Experiments, Tasks and Questionnaires.</li>
+<li><a href="https://github.com/neuropsychology/Neuropsydia.py" class="uri">https://github.com/neuropsychology/Neuropsydia.py</a></li>
+</ul>
+<hr />
+<p><img src="media/neurokit.png" width="300" style="display: block; margin: auto;" /></p>
+</div>
+<div id="neurokit" class="section level3">
+<h3><strong>NeuroKit</strong></h3>
+<ul>
+<li>A Python Toolbox for Statistics and Neurophysiological Signal Processing (EEG, EDA, ECG, EMG…).</li>
+<li><a href="https://github.com/neuropsychology/NeuroKit.py" class="uri">https://github.com/neuropsychology/NeuroKit.py</a></li>
+</ul>
+<hr />
+<p><img src="media/psycho.png" width="300" style="display: block; margin: auto;" /></p>
+</div>
+<div id="psycho" class="section level3">
+<h3><strong>Psycho</strong></h3>
+<ul>
+<li>An R package for Efficient and Publishing-Oriented Workflow for Psychological Science.</li>
+<li><a href="https://github.com/neuropsychology/psycho.R" class="uri">https://github.com/neuropsychology/psycho.R</a></li>
+</ul>
+<hr />
+</div>
 
 
 
