--- a/about.html
+++ b/about.html
@@ -281,16 +281,40 @@ $(document).ready(function () {
 <em>Titles and Licenses</em>
 </p>
 <ul>
-<li>Clinical Neuropsychologist (2014, University of Sorbonne Paris Cité)</li>
-<li>Cognitive and Behavioural Psychotherapist (2017, AFTCC)</li>
+<li>Clinical Neuropsychologist (2014, University of Sorbonne Paris Cité, France)</li>
+<li>Cognitive and Behavioural Psychotherapist (2017, AFTCC, France)</li>
 </ul>
 <p align="center">
 <em>Certifications</em>
 </p>
 <ul>
-<li>Academic Teaching (2017, University of Sorbonne Paris Cité)</li>
-<li>Mindfulness based on Compassion and Insight (2016, Sainte-Anne Hospital)</li>
-<li>First Aid (2016, University of Sorbonne Paris Cité)</li>
+<li>Academic Teaching (2017, University of Sorbonne Paris Cité, France)</li>
+<li>Mindfulness based on Compassion and Insight (2016, Sainte-Anne Hospital, France)</li>
+<li>First Aid (2016, University of Sorbonne Paris Cité, France)</li>
+</ul>
+<p align="center">
+<em>Trainings</em>
+</p>
+<ul>
+<li>Neuroimagery
+<ul>
+<li>Multiscale neurodynamics of emotions: from oscillations to complex networks (2017, University of Lille, France)</li>
+<li>Introduction to eye tracking (2016, University of Sorbonne Paris Cité, France)</li>
+<li>fMRI and Connectivity (2017, INSTN, France)</li>
+<li>fMRI : preprocessing and analysis (2017, Sainte-Anne Hospital, France)</li>
+<li>Signal Processing Theory and Application for EEG (ESPCI, France)</li>
+</ul></li>
+<li>Statistics
+<ul>
+<li>Statistics and R for the Life Sciences (2015, Harvard University EDx)</li>
+<li>Machine Learning and Brain-to-Computer Interfaces (2014, ESPCI, France)</li>
+<li>{Introduction to Statistics with R (2014, Paris Sud University, France)</li>
+</ul></li>
+<li>Programming
+<ul>
+<li>Scientific Programming with Python and Software Engineering Best Practices (2016, Telecom ParisTech, France)</li>
+<li>P4N 2016: Python for Neuroscience (and Psychology) (2016, University of Nottingham, UK)</li>
+</ul></li>
 </ul>
 </div>
 
